--- a/src/app/code/Custom/CustomModule/view/frontend/layout/custom_module_hello_world.xml
+++ b/src/app/code/Custom/CustomModule/view/frontend/layout/custom_module_hello_world.xml
@@ -7,6 +7,7 @@
         <css src="Custom_CustomModule::css/style.css"/>
         <css src="Custom_CustomModule::css/clock.css"/>
         <css src="Custom_CustomModule::js/clock.js"/>
+        <!-- <css src="Custom_CustomModule::js/weather.js"/> -->
     </head>
     <body>
         <referenceContainer name="content">
