--- a/src/app/code/Custom/CustomModule/view/frontend/templates/hello_world.phtml
+++ b/src/app/code/Custom/CustomModule/view/frontend/templates/hello_world.phtml
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
-<html style="margin-top: 200px">
+<html>
 <h1>Hello World</h1>
 <!-- <div id="weather"></div> -->
-<section class="border-clock"></section>
-<section class="clock">
-    <ul>
-        <li><i>12</i></li>
-        <li><i>1</i></li>
-        <li><i>2</i></li>
-        <li><i>3</i></li>
-        <li><i>4</i></li>
-        <li><i>5</i></li>
-        <li><i>6</i></li>
-        <li><i>7</i></li>
-        <li><i>8</i></li>
-        <li><i>9</i></li>
-        <li><i>10</i></li>
-        <li><i>11</i></li>
-    </ul>
-
-    <h2>ophelia</h2>
-    <h3>fournier-laflamme</h3>
-
-    <output class="date"></output>
-
-    <div class="minutes"></div>
-    <div class="hours"></div>
-    <div class="seconds"></div>
-    <div class="cercle"></div>
-
-</section>
+<div style="margin-top: 100px">
+    <section class="border-clock"></section>
+    <section class="clock">
+        <ul>
+            <li><i>12</i></li>
+            <li><i>1</i></li>
+            <li><i>2</i></li>
+            <li><i>3</i></li>
+            <li><i>4</i></li>
+            <li><i>5</i></li>
+            <li><i>6</i></li>
+            <li><i>7</i></li>
+            <li><i>8</i></li>
+            <li><i>9</i></li>
+            <li><i>10</i></li>
+            <li><i>11</i></li>
+        </ul>
+        <h2>long</h2>
+        <h3>đẹp trai</h3>
+        <output class="date"></output>
+        <div class="minutes"></div>
+        <div class="hours"></div>
+        <div class="seconds"></div>
+        <div class="cercle"></div>
+    </section>
+</div>
 <script>
-    require(['jquery'], function($) {
+    require(['jquery', 'simple_weather'], function($) {
         $(document).ready(function() {
             console.log("Hello World");
             // $.simpleWeather({
