--- a/src/app/code/Custom/CustomModule/view/frontend/web/css/clock.css
+++ b/src/app/code/Custom/CustomModule/view/frontend/web/css/clock.css
@@ -7,6 +7,7 @@ i {
 }
 
 h2, h3 {
+  margin-top: 10px;
   font-size: 7px;
   letter-spacing: 1px;
   font-variant: small-caps;
@@ -45,7 +46,7 @@ section.border-clock {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); 
+  transform: translate(-50%, -50%);
   box-shadow: 15px 15px 35px -10px #488893;
 }
 
@@ -145,10 +146,12 @@ section.clock {
 
   ul {
     height: 38%;
-    width: 0;
+    width: 10%;
     position: absolute;
+    top: 13%;
     bottom: 50%;
     left: 50%;
+    list-style-type: none;
 
     li {
       height: 100%;
